--- a/index.html
+++ b/index.html
@@ -4,12 +4,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <meta name="title" content="Summary Component">
+    <meta name="description" content="Esta es una pagina web de practica de diseño front-end">
+    <meta property="og:title" content="Esta es una pagina web de practica de diseño front-end">
+    <meta name="author" content="Kevin Silva Rivera">
+    <title>Summary Component</title>
     <link rel="shortcut icon" href="assets/images/favicon-32x32.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
+
+    <header></header>
+    <nav></nav>
+    <main>
+        <section class="content">
+            <div class="result">
+                <h2>Your Result</h2>
+                <p class="score">
+                    <span class="cal">76</span>
+                    <span>of 100</span>
+                </p>
+                <p class="p 1">Great</p>
+                <p class="p 2">You scored higher that 65% of the people who have taken these tests.</p>
+            </div>
+            <div class="summary">
+                <h2>Summary</h2>
+                <ul>
+                    <li class="uno">
+                        <p>Reaction</p>
+                        <p><span>80</span><span> / 100</span></p>
+                    </li>
+                    <li class="dos">
+                        <p>Memory</p>
+                        <p><span>92</span><span> / 100</span></p>
+                    </li>
+                    <li class="tres">
+                        <p>Verbal</p>
+                        <p><span>61</span><span> / 100</span></p>
+                    </li>
+                    <li class="cuatro">
+                        <p>Visual</p>
+                        <p><span>73</span><span> / 100</span></p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+        <aside></aside>
+    </main>
 
 </body>
 
