--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
                 <ul>
                     <li class="uno">
                         <p>Reaction</p>
-                        <p><span>80</span><span> / 100</span></p>
+                        <p><span class="primero">80</span><span class="segundo"> / 100</span></p>
                     </li>
                     <li class="dos">
                         <p>Memory</p>
-                        <p><span>92</span><span> / 100</span></p>
+                        <p><span class="primero">92</span><span class="segundo"> / 100</span></p>
                     </li>
                     <li class="tres">
                         <p>Verbal</p>
-                        <p><span>61</span><span> / 100</span></p>
+                        <p><span class="primero">61</span><span class="segundo"> / 100</span></p>
                     </li>
                     <li class="cuatro">
                         <p>Visual</p>
-                        <p><span>73</span><span> / 100</span></p>
+                        <p><span class="primero">73</span><span class="segundo"> / 100</span></p>
                     </li>
                 </ul>
             </div>
